add asset and made tab and viewer

--- a/newsstand.html
+++ b/newsstand.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 <head>
 	<title>Let's go~</title>
 	<link href="style.css" rel="stylesheet" type="text/css">
@@ -7,16 +7,12 @@
 <body>
 	<div class="Container">
 		<div class="Title">
-			<img class="Title-Icon">
+			<img class="Title-Icon" src="./asset/title-icon.svg">
 			<div class="Title-Text">뉴스스텐드</div>
 		</div>
 		<div class="TodaysDate">2023.07.23</div>
-    <button class="Button LeftButton">
-      <img src="" alt="LeftButton">
-    </button>
-    <button class="Button RightButton">
-      <img src="" alt="RightButton">
-    </button>
+		<button class="Button LeftButton"></button>
+		<button class="Button RightButton"></button>
 		<div class="AutoRollingNewsBar">
 			<div class="AutoRollingNews">
         <div class="Press">연합뉴스</div>
@@ -27,11 +23,15 @@
         <div class="NewsTitle">[1보] 김기현·안철수·천하람·황교안, 與전대 본경선 진출</div>
 			</div>
 		</div>
-		<div class="Tab and Viewer">
+		<div class="Tab-and-Viewer">
 			<div class="TapButton">
+        <div class="AllPress">전체 언론사</div>
+        <div class="SubscribedPress">내가 구독한 언론사</div>
 			</div>
 			<div class="ViewerButton">
-			</div>
+        <img class="list-view" src="./asset/list-view.svg" alt="list-view">
+        <img class="grid-view" src="./asset/grid-view.svg" alt="grid-view">
+      </div>
 		</div>
 		<div class="NewsList">
 			<div class="FieldTab">
