chosen jonghan/economy

--- a/newsstand.html
+++ b/newsstand.html
@@ -10,38 +10,63 @@
 			<img class="Title-Icon" src="./asset/title-icon.svg">
 			<div class="Title-Text">뉴스스텐드</div>
 		</div>
+		
 		<div class="TodaysDate">2023.07.23</div>
+
 		<button class="Button LeftButton"></button>
 		<button class="Button RightButton"></button>
+		
 		<div class="AutoRollingNewsBar">
 			<div class="AutoRollingNews">
-        <div class="Press">연합뉴스</div>
-        <div class="NewsTitle">[1보] 김기현·안철수·천하람·황교안, 與전대 본경선 진출</div>
+				<div class="Press">연합뉴스</div>
+				<div class="NewsTitle">[1보] 김기현·안철수·천하람·황교안, 與전대 본경선 진출</div>
 			</div>
+
 			<div class="AutoRollingNews">
-        <div class="Press">연합뉴스</div>
-        <div class="NewsTitle">[1보] 김기현·안철수·천하람·황교안, 與전대 본경선 진출</div>
+				<div class="Press">연합뉴스</div>
+				<div class="NewsTitle">[1보] 김기현·안철수·천하람·황교안, 與전대 본경선 진출</div>
 			</div>
 		</div>
+
 		<div class="Tab-and-Viewer">
 			<div class="TapButton">
-        <div class="AllPress">전체 언론사</div>
-        <div class="SubscribedPress">내가 구독한 언론사</div>
+				<div class="AllPress">전체 언론사</div>
+				<div class="SubscribedPress">내가 구독한 언론사</div>
 			</div>
+
 			<div class="ViewerButton">
-        <img class="list-view" src="./asset/list-view.svg" alt="list-view">
-        <img class="grid-view" src="./asset/grid-view.svg" alt="grid-view">
-      </div>
+				<button class="list-view"></button>
+				<button class="grid-view"></button>
+			</div>
 		</div>
 		<div class="NewsList">
 			<div class="FieldTab">
-				<div class="all">종합/경제</div>
-				<div class="broad">방송/통신</div>
-				<div class="IT">IT</div>
+				<div class="all">
+					<div class="all-text">종합/경제</div>
+						<div class="all-percentage">
+							<div class="current-all-cnt">2</div>
+							<div class="division">/</div>
+							<div class="all-cnt">81</div>
+          				</div>
+        			</div>
+				</div>
+				
+				<div class="broad">
+					<div class="broad-text">방송/통신</div>
+						<div class="broad-percentage">
+							<div class="current-broad-cnt">2</div>
+							<div class="division">/</div>
+							<div class="broad-cnt">81</div>
+          				</div>
+        			</div>
+				</div>
+				<div class="it">IT</div>
+				<div class="english">영자지</div>
 				<div class="sports">스포츠/연예</div>
 				<div class="magazine">매거진/전문지</div>
 				<div class="region">지역</div>
 			</div>
+
 			<div class="PressNews">
 				<div class="PressInfo">
 
@@ -60,3 +85,4 @@
 	</div>
 </body>
 </html>
+
