--- a/newsstand.html
+++ b/newsstand.html
@@ -42,29 +42,67 @@
 		<div class="NewsList">
 			<div class="FieldTab">
 				<div class="all">
-					<div class="all-text">종합/경제</div>
-						<div class="all-percentage">
-							<div class="current-all-cnt">2</div>
-							<div class="division">/</div>
-							<div class="all-cnt">81</div>
-          				</div>
-        			</div>
+					<div class="Field-chosen">종합/경제</div>
+					<div class="all-percentage">
+						<div class="current-all-cnt">2</div>
+						<div class="division">/</div>
+						<div class="all-cnt">81</div>
+					</div>
 				</div>
 				
 				<div class="broad">
 					<div class="broad-text">방송/통신</div>
-						<div class="broad-percentage">
-							<div class="current-broad-cnt">2</div>
-							<div class="division">/</div>
-							<div class="broad-cnt">81</div>
-          				</div>
-        			</div>
+					<div class="broad-percentage">
+						<div class="current-broad-cnt">2</div>
+						<div class="division">/</div>
+						<div class="broad-cnt">10</div>
+					</div>
 				</div>
-				<div class="it">IT</div>
-				<div class="english">영자지</div>
-				<div class="sports">스포츠/연예</div>
-				<div class="magazine">매거진/전문지</div>
-				<div class="region">지역</div>
+
+				<div class="it">
+					<div class="it-text">it</div>
+					<div class="it-percentage">
+						<div class="current-it-cnt">2</div>
+						<div class="division">/</div>
+						<div class="it-cnt">10</div>
+					</div>
+				</div>
+
+				<div class="english">
+					<div class="english-text">영자지</div>
+					<div class="english-percentage">
+						<div class="current-english-cnt">2</div>
+						<div class="division">/</div>
+						<div class="english-cnt">10</div>
+					</div>
+				</div>
+
+				<div class="sports">
+					<div class="sports-text">스포츠/연예</div>
+					<div class="sports-percentage">
+						<div class="current-sports-cnt">2</div>
+						<div class="division">/</div>
+						<div class="sports-cnt">10</div>
+					</div>
+				</div>
+
+				<div class="magazine">
+					<div class="magazine-text">메거진/전문지</div>
+					<div class="magazine-percentage">
+						<div class="current-magazine-cnt">2</div>
+						<div class="division">/</div>
+						<div class="magazine-cnt">10</div>
+					</div>
+				</div>
+
+				<div class="region">
+					<div class="region-text">지역</div>
+					<div class="region-percentage">
+						<div class="current-region-cnt">2</div>
+						<div class="division">/</div>
+						<div class="region-cnt">10</div>
+					</div>
+				</div>
 			</div>
 
 			<div class="PressNews">
