almost done but css check again

--- a/newsstand.html
+++ b/newsstand.html
@@ -104,23 +104,31 @@
 					</div>
 				</div>
 			</div>
-
 			<div class="PressNews">
 				<div class="PressInfo">
-
+				  <div class="Brandmark">데일리</div>
+				  <div class="EditDate">2023.02.10. 18:57 편집</div>
+				  <button class="SubscribeButton">+ 구독하기</button>
 				</div>
 				<div class="News">
-
-				</div>
-				<div class="Main">
-				</div>
-
-				<div class="Sub">
-
+					<div class="Main">
+					  <div class="Thumbnail"></div>
+					  <div class="MainTitle">또 국민연금의 몽니</div>
+					</div>
+					<div class="Sub">
+						<ul>
+							<li>"hello~""hello~""hello~""hello~""hello~""hello~""hello~""hello~""hello~""hello~""hello~""hello~""hello~""hello~"</li>
+							<li>"hello~"</li>
+							<li>"hello~"</li>
+							<li>"hello~"</li>
+							<li>"hello~"</li>
+							<li>"hello~"</li>
+							<li>"hello~"</li>
+						</ul>
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
+  	</div>
 </body>
 </html>
-
