--- a/newsstand.html
+++ b/newsstand.html
@@ -18,13 +18,13 @@
 		
 		<div class="AutoRollingNewsBar">
 			<div class="AutoRollingNews">
-				<div class="Press">연합뉴스</div>
-				<div class="NewsTitle">[1보] 김기현·안철수·천하람·황교안, 與전대 본경선 진출</div>
+				<div class="AutoRollingNews-Press">연합뉴스</div>
+				<div class="AutoRollingNews-NewsTitle">[1보] 김기현·안철수·천하람·황교안, 與전대 본경선 진출</div>
 			</div>
 
 			<div class="AutoRollingNews">
-				<div class="Press">연합뉴스</div>
-				<div class="NewsTitle">[1보] 김기현·안철수·천하람·황교안, 與전대 본경선 진출</div>
+				<div class="AutoRollingNews-Press">연합뉴스</div>
+				<div class="AutoRollingNews-NewsTitle">[1보] 김기현·안철수·천하람·황교안, 與전대 본경선 진출</div>
 			</div>
 		</div>
 
@@ -35,8 +35,12 @@
 			</div>
 
 			<div class="ViewerButton">
-				<button class="list-view"></button>
-				<button class="grid-view"></button>
+				<div class="list-view">
+					<button class="list-symbol"></button>
+				</div>
+				<div class="grid-view">
+					<button class="grid-symbol"></button>
+				</div>
 			</div>
 		</div>
 		<div class="NewsList">
@@ -44,7 +48,7 @@
 				<div class="all">
 					<div class="Field-chosen">종합/경제</div>
 					<div class="all-percentage">
-						<div class="current-all-cnt">2</div>
+						<div class="current-all">2</div>
 						<div class="division">/</div>
 						<div class="all-cnt">81</div>
 					</div>
@@ -53,7 +57,7 @@
 				<div class="broad">
 					<div class="broad-text">방송/통신</div>
 					<div class="broad-percentage">
-						<div class="current-broad-cnt">2</div>
+						<div class="current-broad">2</div>
 						<div class="division">/</div>
 						<div class="broad-cnt">10</div>
 					</div>
@@ -62,7 +66,7 @@
 				<div class="it">
 					<div class="it-text">it</div>
 					<div class="it-percentage">
-						<div class="current-it-cnt">2</div>
+						<div class="current-it">2</div>
 						<div class="division">/</div>
 						<div class="it-cnt">10</div>
 					</div>
@@ -71,7 +75,7 @@
 				<div class="english">
 					<div class="english-text">영자지</div>
 					<div class="english-percentage">
-						<div class="current-english-cnt">2</div>
+						<div class="current-english">2</div>
 						<div class="division">/</div>
 						<div class="english-cnt">10</div>
 					</div>
@@ -80,7 +84,7 @@
 				<div class="sports">
 					<div class="sports-text">스포츠/연예</div>
 					<div class="sports-percentage">
-						<div class="current-sports-cnt">2</div>
+						<div class="current-sports">2</div>
 						<div class="division">/</div>
 						<div class="sports-cnt">10</div>
 					</div>
@@ -89,7 +93,7 @@
 				<div class="magazine">
 					<div class="magazine-text">메거진/전문지</div>
 					<div class="magazine-percentage">
-						<div class="current-magazine-cnt">2</div>
+						<div class="current-magazine">2</div>
 						<div class="division">/</div>
 						<div class="magazine-cnt">10</div>
 					</div>
@@ -98,7 +102,7 @@
 				<div class="region">
 					<div class="region-text">지역</div>
 					<div class="region-percentage">
-						<div class="current-region-cnt">2</div>
+						<div class="current-region">2</div>
 						<div class="division">/</div>
 						<div class="region-cnt">10</div>
 					</div>
@@ -123,8 +127,8 @@
 							<li>"hello~"</li>
 							<li>"hello~"</li>
 							<li>"hello~"</li>
-							<li>"hello~"</li>
 						</ul>
+						<div class="Caption">서울경제 언론사에서 직접 편집한 뉴스입니다.</div>
 					</div>
 				</div>
 			</div>
