add setData func and comment

--- a/newsstand.html
+++ b/newsstand.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
 	<title>Let's go~</title>
-	<link href="style.css" rel="stylesheet" type="text/css">
+	<link href="./css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<div class="Container">
@@ -46,11 +46,11 @@
 		<div class="NewsList">
 			<div class="FieldTab">
 				<div class="all">
-					<div class="Field-chosen">종합/경제</div>
+					<div class="all-text Field-chosen">종합/경제</div>
 					<div class="all-percentage">
 						<div class="current-all">2</div>
 						<div class="division">/</div>
-						<div class="all-cnt">81</div>
+						<div class="all-num">81</div>
 					</div>
 				</div>
 				
@@ -59,16 +59,16 @@
 					<div class="broad-percentage">
 						<div class="current-broad">2</div>
 						<div class="division">/</div>
-						<div class="broad-cnt">10</div>
+						<div class="broad-num">10</div>
 					</div>
 				</div>
 
 				<div class="it">
-					<div class="it-text">it</div>
+					<div class="it-text">IT</div>
 					<div class="it-percentage">
 						<div class="current-it">2</div>
 						<div class="division">/</div>
-						<div class="it-cnt">10</div>
+						<div class="it-num">10</div>
 					</div>
 				</div>
 
@@ -77,7 +77,7 @@
 					<div class="english-percentage">
 						<div class="current-english">2</div>
 						<div class="division">/</div>
-						<div class="english-cnt">10</div>
+						<div class="english-num">10</div>
 					</div>
 				</div>
 
@@ -86,7 +86,7 @@
 					<div class="sports-percentage">
 						<div class="current-sports">2</div>
 						<div class="division">/</div>
-						<div class="sports-cnt">10</div>
+						<div class="sports-num">10</div>
 					</div>
 				</div>
 
@@ -95,7 +95,7 @@
 					<div class="magazine-percentage">
 						<div class="current-magazine">2</div>
 						<div class="division">/</div>
-						<div class="magazine-cnt">10</div>
+						<div class="magazine-num">10</div>
 					</div>
 				</div>
 
@@ -104,31 +104,22 @@
 					<div class="region-percentage">
 						<div class="current-region">2</div>
 						<div class="division">/</div>
-						<div class="region-cnt">10</div>
+						<div class="region-num">10</div>
 					</div>
 				</div>
 			</div>
 			<div class="PressNews">
 				<div class="PressInfo">
-				  <div class="Brandmark">데일리</div>
-				  <div class="EditDate">2023.02.10. 18:57 편집</div>
+				  <div class="Brandmark"></div>
+				  <div class="EditDate"></div>
 				  <button class="SubscribeButton">+ 구독하기</button>
 				</div>
 				<div class="News">
 					<div class="Main">
 					  <div class="Thumbnail"></div>
-					  <div class="MainTitle">또 국민연금의 몽니</div>
+					  <div class="MainTitle"></div>
 					</div>
 					<div class="Sub">
-						<ul>
-							<li>"hello~""hello~""hello~""hello~""hello~""hello~""hello~""hello~""hello~""hello~""hello~""hello~""hello~""hello~"</li>
-							<li>"hello~"</li>
-							<li>"hello~"</li>
-							<li>"hello~"</li>
-							<li>"hello~"</li>
-							<li>"hello~"</li>
-						</ul>
-						<div class="Caption">서울경제 언론사에서 직접 편집한 뉴스입니다.</div>
 					</div>
 				</div>
 			</div>
