modified css and add clickTab

--- a/newsstand.html
+++ b/newsstand.html
@@ -45,66 +45,66 @@
 		</div>
 		<div class="NewsList">
 			<div class="FieldTab">
-				<div class="all">
-					<div class="all-text Field-chosen">종합/경제</div>
-					<div class="all-percentage">
-						<div class="current-all">2</div>
+				<div class="Tab Field-chosen">
+					<div class="text">종합/경제</div>
+					<div class="percentage">
+						<div class="current-all"></div>
 						<div class="division">/</div>
-						<div class="all-num">81</div>
+						<div class="all-num"></div>
 					</div>
 				</div>
 				
-				<div class="broad">
-					<div class="broad-text">방송/통신</div>
-					<div class="broad-percentage">
-						<div class="current-broad">2</div>
+				<div class="Tab">
+					<div class="text">방송/통신</div>
+					<div class="percentage">
+						<div class="current-broad"></div>
 						<div class="division">/</div>
-						<div class="broad-num">10</div>
+						<div class="broad-num"></div>
 					</div>
 				</div>
 
-				<div class="it">
-					<div class="it-text">IT</div>
-					<div class="it-percentage">
-						<div class="current-it">2</div>
+				<div class="Tab">
+					<div class="text">IT</div>
+					<div class="percentage">
+						<div class="current-it"></div>
 						<div class="division">/</div>
-						<div class="it-num">10</div>
+						<div class="it-num"></div>
 					</div>
 				</div>
 
-				<div class="english">
-					<div class="english-text">영자지</div>
-					<div class="english-percentage">
-						<div class="current-english">2</div>
+				<div class="Tab">
+					<div class="text">영자지</div>
+					<div class="percentage">
+						<div class="current-english"></div>
 						<div class="division">/</div>
-						<div class="english-num">10</div>
+						<div class="english-num"></div>
 					</div>
 				</div>
 
-				<div class="sports">
-					<div class="sports-text">스포츠/연예</div>
-					<div class="sports-percentage">
-						<div class="current-sports">2</div>
+				<div class="Tab">
+					<div class="text">스포츠/연예</div>
+					<div class="percentage">
+						<div class="current-sports"></div>
 						<div class="division">/</div>
-						<div class="sports-num">10</div>
+						<div class="sports-num"></div>
 					</div>
 				</div>
 
-				<div class="magazine">
-					<div class="magazine-text">메거진/전문지</div>
-					<div class="magazine-percentage">
-						<div class="current-magazine">2</div>
+				<div class="Tab">
+					<div class="text">메거진/전문지</div>
+					<div class="percentage">
+						<div class="current-magazine"></div>
 						<div class="division">/</div>
-						<div class="magazine-num">10</div>
+						<div class="magazine-num"></div>
 					</div>
 				</div>
 
-				<div class="region">
-					<div class="region-text">지역</div>
-					<div class="region-percentage">
-						<div class="current-region">2</div>
+				<div class="Tab">
+					<div class="text">지역</div>
+					<div class="percentage">
+						<div class="current-region"></div>
 						<div class="division">/</div>
-						<div class="region-num">10</div>
+						<div class="region-num"></div>
 					</div>
 				</div>
 			</div>
