made display none pressNews

--- a/newsstand.html
+++ b/newsstand.html
@@ -114,7 +114,55 @@
 				  <div class="EditDate"></div>
 				  <button class="SubscribeButton">+ 구독하기</button>
 				</div>
-				<div class="News">
+				<div class="All News">
+					<div class="Main">
+					  <div class="Thumbnail"></div>
+					  <div class="MainTitle"></div>
+					</div>
+					<div class="Sub">
+					</div>
+				</div>
+				<div class="Broad News">
+					<div class="Main">
+					  <div class="Thumbnail"></div>
+					  <div class="MainTitle"></div>
+					</div>
+					<div class="Sub">
+					</div>
+				</div>
+				<div class="It News">
+					<div class="Main">
+					  <div class="Thumbnail"></div>
+					  <div class="MainTitle"></div>
+					</div>
+					<div class="Sub">
+					</div>
+				</div>
+				<div class="english News">
+					<div class="Main">
+					  <div class="Thumbnail"></div>
+					  <div class="MainTitle"></div>
+					</div>
+					<div class="Sub">
+					</div>
+				</div>
+				<div class="Sports News">
+					<div class="Main">
+					  <div class="Thumbnail"></div>
+					  <div class="MainTitle"></div>
+					</div>
+					<div class="Sub">
+					</div>
+				</div>
+				<div class="Magazine News">
+					<div class="Main">
+					  <div class="Thumbnail"></div>
+					  <div class="MainTitle"></div>
+					</div>
+					<div class="Sub">
+					</div>
+				</div>
+				<div class="Region News">
 					<div class="Main">
 					  <div class="Thumbnail"></div>
 					  <div class="MainTitle"></div>
