click tab then data changes

--- a/newsstand.html
+++ b/newsstand.html
@@ -7,7 +7,7 @@
 <body>
 	<div class="Container">
 		<div class="Title">
-			<img class="Title-Icon" src="./asset/title-icon.svg">
+			<img class="Title-Icon" src="./asset/button/title-icon.svg">
 			<div class="Title-Text">뉴스스텐드</div>
 		</div>
 		
@@ -45,7 +45,7 @@
 		</div>
 		<div class="NewsList">
 			<div class="FieldTab">
-				<div class="Tab Field-chosen">
+				<div class="Tab Field-chosen" data-tab="all">
 					<div class="text">종합/경제</div>
 					<div class="percentage">
 						<div class="current-all"></div>
@@ -54,7 +54,7 @@
 					</div>
 				</div>
 				
-				<div class="Tab">
+				<div class="Tab" data-tab="broad">
 					<div class="text">방송/통신</div>
 					<div class="percentage">
 						<div class="current-broad"></div>
@@ -63,7 +63,7 @@
 					</div>
 				</div>
 
-				<div class="Tab">
+				<div class="Tab" data-tab="it">
 					<div class="text">IT</div>
 					<div class="percentage">
 						<div class="current-it"></div>
@@ -72,7 +72,7 @@
 					</div>
 				</div>
 
-				<div class="Tab">
+				<div class="Tab" data-tab="english">
 					<div class="text">영자지</div>
 					<div class="percentage">
 						<div class="current-english"></div>
@@ -81,7 +81,7 @@
 					</div>
 				</div>
 
-				<div class="Tab">
+				<div class="Tab" data-tab="sports">
 					<div class="text">스포츠/연예</div>
 					<div class="percentage">
 						<div class="current-sports"></div>
@@ -90,7 +90,7 @@
 					</div>
 				</div>
 
-				<div class="Tab">
+				<div class="Tab" data-tab="magazine">
 					<div class="text">메거진/전문지</div>
 					<div class="percentage">
 						<div class="current-magazine"></div>
@@ -99,7 +99,7 @@
 					</div>
 				</div>
 
-				<div class="Tab">
+				<div class="Tab" data-tab="region">
 					<div class="text">지역</div>
 					<div class="percentage">
 						<div class="current-region"></div>
@@ -108,13 +108,13 @@
 					</div>
 				</div>
 			</div>
-			<div class="PressNews">
+			<div class="all PressNews NewsChosen">
 				<div class="PressInfo">
 				  <div class="Brandmark"></div>
 				  <div class="EditDate"></div>
 				  <button class="SubscribeButton">+ 구독하기</button>
 				</div>
-				<div class="All News">
+				<div class="News">
 					<div class="Main">
 					  <div class="Thumbnail"></div>
 					  <div class="MainTitle"></div>
@@ -122,7 +122,14 @@
 					<div class="Sub">
 					</div>
 				</div>
-				<div class="Broad News">
+			</div>
+			<div class="broad PressNews">
+				<div class="PressInfo">
+				  <div class="Brandmark"></div>
+				  <div class="EditDate"></div>
+				  <button class="SubscribeButton">+ 구독하기</button>
+				</div>
+				<div class="News">
 					<div class="Main">
 					  <div class="Thumbnail"></div>
 					  <div class="MainTitle"></div>
@@ -130,7 +137,14 @@
 					<div class="Sub">
 					</div>
 				</div>
-				<div class="It News">
+			</div>
+			<div class="it PressNews">
+				<div class="PressInfo">
+				  <div class="Brandmark"></div>
+				  <div class="EditDate"></div>
+				  <button class="SubscribeButton">+ 구독하기</button>
+				</div>
+				<div class="News">
 					<div class="Main">
 					  <div class="Thumbnail"></div>
 					  <div class="MainTitle"></div>
@@ -138,7 +152,14 @@
 					<div class="Sub">
 					</div>
 				</div>
-				<div class="english News">
+			</div>
+			<div class="english PressNews">
+				<div class="PressInfo">
+				  <div class="Brandmark"></div>
+				  <div class="EditDate"></div>
+				  <button class="SubscribeButton">+ 구독하기</button>
+				</div>
+				<div class="News">
 					<div class="Main">
 					  <div class="Thumbnail"></div>
 					  <div class="MainTitle"></div>
@@ -146,7 +167,14 @@
 					<div class="Sub">
 					</div>
 				</div>
-				<div class="Sports News">
+			</div>
+			<div class="sports PressNews">
+				<div class="PressInfo">
+				  <div class="Brandmark"></div>
+				  <div class="EditDate"></div>
+				  <button class="SubscribeButton">+ 구독하기</button>
+				</div>
+				<div class="News">
 					<div class="Main">
 					  <div class="Thumbnail"></div>
 					  <div class="MainTitle"></div>
@@ -154,7 +182,14 @@
 					<div class="Sub">
 					</div>
 				</div>
-				<div class="Magazine News">
+			</div>
+			<div class="magazine PressNews">
+				<div class="PressInfo">
+				  <div class="Brandmark"></div>
+				  <div class="EditDate"></div>
+				  <button class="SubscribeButton">+ 구독하기</button>
+				</div>
+				<div class="News">
 					<div class="Main">
 					  <div class="Thumbnail"></div>
 					  <div class="MainTitle"></div>
@@ -162,7 +197,14 @@
 					<div class="Sub">
 					</div>
 				</div>
-				<div class="Region News">
+			</div>
+			<div class="region PressNews">
+				<div class="PressInfo">
+				  <div class="Brandmark"></div>
+				  <div class="EditDate"></div>
+				  <button class="SubscribeButton">+ 구독하기</button>
+				</div>
+				<div class="News">
 					<div class="Main">
 					  <div class="Thumbnail"></div>
 					  <div class="MainTitle"></div>
