click button and changes content

--- a/newsstand.html
+++ b/newsstand.html
@@ -11,7 +11,7 @@
 			<div class="Title-Text">뉴스스텐드</div>
 		</div>
 		
-		<div class="TodaysDate">2023.07.23</div>
+		<div class="TodaysDate"></div>
 
 		<button class="Button LeftButton"></button>
 		<button class="Button RightButton"></button>
