click button and click tab are done

--- a/newsstand.html
+++ b/newsstand.html
@@ -45,7 +45,7 @@
 		</div>
 		<div class="NewsList">
 			<div class="FieldTab">
-				<div class="Tab Field-chosen" data-tab="all">
+				<div class="Tab fieldChosen" data-tab="all">
 					<div class="text">종합/경제</div>
 					<div class="percentage">
 						<div class="current-all"></div>
@@ -108,97 +108,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="all PressNews NewsChosen">
-				<div class="PressInfo">
-				  <div class="Brandmark"></div>
-				  <div class="EditDate"></div>
-				  <button class="SubscribeButton">+ 구독하기</button>
-				</div>
-				<div class="News">
-					<div class="Main">
-					  <div class="Thumbnail"></div>
-					  <div class="MainTitle"></div>
-					</div>
-					<div class="Sub">
-					</div>
-				</div>
-			</div>
-			<div class="broad PressNews">
-				<div class="PressInfo">
-				  <div class="Brandmark"></div>
-				  <div class="EditDate"></div>
-				  <button class="SubscribeButton">+ 구독하기</button>
-				</div>
-				<div class="News">
-					<div class="Main">
-					  <div class="Thumbnail"></div>
-					  <div class="MainTitle"></div>
-					</div>
-					<div class="Sub">
-					</div>
-				</div>
-			</div>
-			<div class="it PressNews">
-				<div class="PressInfo">
-				  <div class="Brandmark"></div>
-				  <div class="EditDate"></div>
-				  <button class="SubscribeButton">+ 구독하기</button>
-				</div>
-				<div class="News">
-					<div class="Main">
-					  <div class="Thumbnail"></div>
-					  <div class="MainTitle"></div>
-					</div>
-					<div class="Sub">
-					</div>
-				</div>
-			</div>
-			<div class="english PressNews">
-				<div class="PressInfo">
-				  <div class="Brandmark"></div>
-				  <div class="EditDate"></div>
-				  <button class="SubscribeButton">+ 구독하기</button>
-				</div>
-				<div class="News">
-					<div class="Main">
-					  <div class="Thumbnail"></div>
-					  <div class="MainTitle"></div>
-					</div>
-					<div class="Sub">
-					</div>
-				</div>
-			</div>
-			<div class="sports PressNews">
-				<div class="PressInfo">
-				  <div class="Brandmark"></div>
-				  <div class="EditDate"></div>
-				  <button class="SubscribeButton">+ 구독하기</button>
-				</div>
-				<div class="News">
-					<div class="Main">
-					  <div class="Thumbnail"></div>
-					  <div class="MainTitle"></div>
-					</div>
-					<div class="Sub">
-					</div>
-				</div>
-			</div>
-			<div class="magazine PressNews">
-				<div class="PressInfo">
-				  <div class="Brandmark"></div>
-				  <div class="EditDate"></div>
-				  <button class="SubscribeButton">+ 구독하기</button>
-				</div>
-				<div class="News">
-					<div class="Main">
-					  <div class="Thumbnail"></div>
-					  <div class="MainTitle"></div>
-					</div>
-					<div class="Sub">
-					</div>
-				</div>
-			</div>
-			<div class="region PressNews">
+			<div class="PressNews">
 				<div class="PressInfo">
 				  <div class="Brandmark"></div>
 				  <div class="EditDate"></div>
