click subscribe then button changes

--- a/newsstand.html
+++ b/newsstand.html
@@ -29,7 +29,7 @@
 		</div>
 
 		<div class="Tab-and-Viewer">
-			<div class="TapButton">
+			<div class="TabButton">
 				<div class="AllPress">전체 언론사</div>
 				<div class="SubscribedPress">내가 구독한 언론사</div>
 			</div>
