--- a/newsstand.html
+++ b/newsstand.html
@@ -43,6 +43,7 @@
 				</div>
 			</div>
 		</div>
+		<div class="snackBar">내가 구독한 언론사에 추가되었습니다.</div>
 		<div class="NewsList">
 			<div class="FieldTab">
 				<div class="Tab fieldChosen" data-tab="all">
