add button events and css

--- a/newsstand.html
+++ b/newsstand.html
@@ -44,6 +44,13 @@
 			</div>
 		</div>
 		<div class="snackBar">내가 구독한 언론사에 추가되었습니다.</div>
+		<div class="Alert">
+			<div class="Frame-42"><span style="font-weight: bold; color: black;"></span>을(를) 구독해지하시겠습니까?</div>
+			<div class="Buttons">
+				<div class="PositiveButton">예, 해지합니다</div>
+				<div class="NegativeButton">아니오</div>
+			</div>
+		</div>
 		<div class="NewsList">
 			<div class="FieldTab">
 				<div class="Tab fieldChosen" data-tab="all">
