--- a/newsstand.html
+++ b/newsstand.html
@@ -131,6 +131,21 @@
 					</div>
 				</div>
 			</div>
+			<div class="SubscribedNews">
+				<div class="PressInfo">
+				  <div class="Brandmark"></div>
+				  <div class="EditDate"></div>
+				  <button class="SubscribeButton">+ 구독하기</button>
+				</div>
+				<div class="News">
+					<div class="Main">
+					  <div class="Thumbnail"></div>
+					  <div class="MainTitle"></div>
+					</div>
+					<div class="Sub">
+					</div>
+				</div>
+			</div>
 		</div>
   	</div>
 	<script type="module" src="./javascript/main.js"></script>
